[JBWS-4129] JDK11 fixes/workarounds