@@ -75,7 +75,7 @@
     <wildfly1300.version>13.0.0.Final</wildfly1300.version>
     <wildfly1400.version>14.0.0.Beta2-SNAPSHOT</wildfly1400.version>
     <ejb.api.version>1.0.2.Final</ejb.api.version>
-    <cxf.version>3.2.5</cxf.version>
+    <cxf.version>3.2.5-jbossorg-1</cxf.version>
     <cxf.asm.version>6.2.1</cxf.asm.version>
     <cxf.xjcplugins.version>3.1.0</cxf.xjcplugins.version>
     <jboss-logging.version>3.3.1.Final</jboss-logging.version>
@@ -1536,6 +1536,21 @@
           --add-exports=java.xml/com.sun.org.apache.xpath.internal.jaxp=ALL-UNNAMED
           --add-exports=java.xml/com.sun.xml.internal.stream=ALL-UNNAMED
           --add-exports=java.xml/javax.xml.namespace=ALL-UNNAMED
+        </modular.jdk.props>
+        <!--modular.jdk.props>-Dsun.util.logging.disableCallerCheck=true -Dsun.reflect.debugModuleAccessChecks=true -Djaxb.debug=true</modular.jdk.props-->
+      </properties>
+    </profile>
+
+    <profile>
+      <id>JDK10plus</id>
+      <activation>
+        <jdk>[10,)</jdk>
+      </activation>
+      <properties>
+        <modular.jdk.args>
+          --add-modules=java.se
+        </modular.jdk.args>
+        <modular.jdk.props>
         </modular.jdk.props>
         <!--modular.jdk.props>-Dsun.util.logging.disableCallerCheck=true -Dsun.reflect.debugModuleAccessChecks=true -Djaxb.debug=true</modular.jdk.props-->
       </properties>
